spacing issue on pills fix

--- a/src/containers/shared/components/TokenSearchResults/styles.scss
+++ b/src/containers/shared/components/TokenSearchResults/styles.scss
@@ -74,6 +74,7 @@ padding-left: 1rem;
 .result-name-line {
 display: flex;
 flex-wrap: wrap;
+align-items: center;
 margin-bottom: 0.5rem;
 white-space: nowrap;
 }
